# dl-project

./: .env.example  .gitignore  DESIGN.md  README.md  main.py  pyproject.toml
ai/notebooks/: 1-yolo-v0.ipynb  2-yolo_img_classification.ipynb  3-yolo-v1.ipynb  4-test-yolo.ipynb  5-yolo_object-detection.ipynb  dl-v3.ipynb  rock_paper_scissors_cnn.ipynb
ai/notebooks/runs/classify/rps_yolo26n/: args.yaml  results.csv
ai/notebooks/runs/classify/rps_yolo26n/weights/: best.pt
backend/: README.md
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: __init__.py  health.py  predict.py
backend/app/core/: config.py
backend/app/inference/: __init__.py  base.py  keras_classifier.py
backend/app/schemas/: predict.py
backend/app/services/: __init__.py  prediction_service.py
backend/tests/: conftest.py  test_health.py  test_predict.py
frontend/: .env.local.example  .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Card.tsx  HealthBadge.tsx  PredictionForm.tsx  PredictionHistory.tsx  PredictionResult.tsx  StatsPanel.tsx
frontend/src/hooks/: useHealth.ts
frontend/src/lib/: api.ts  format.ts  types.ts
notebooks/: dl-v1.ipynb  dl-v2.ipynb  yolo-v0.ipynb
