[project]
name = "dl-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.14"
dependencies = [
    "ipykernel>=7.2.0",
    "keras>=3.13.2",
    "matplotlib>=3.10.9",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "tensorflow==2.16.2",
    "torch==2.2.2",
    "ultralytics>=8.4.46",
]
