[project]
name = "dl-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.14"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "ipykernel>=7.2.0",
    "keras>=3.13.2",
    "matplotlib>=3.10.9",
    "numpy>=1.26.4",
    "pillow>=12.2.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.27",
    "scikit-learn>=1.8.0",
    "tensorflow==2.16.2",
]
